<resources>
    <string name="app_name">Project_S_H_O_P</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="authorization">Authorization</string>
    <string name="log_in">Log in</string>
    <string name="already_have_account_log_in">Already have account? Log in</string>
    <string name="registration">Don\'t have an account yet? Sign up</string>
    <string name="products">Products</string>
    <string name="view_item">View item</string>
    <string name="buy">Buy</string>
</resources>