<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_orange"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:textSize="25sp"
        android:text="@string/log_in" />

    <EditText
        android:id="@+id/user_login_auth"
        android:hint="@string/login"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:ems="10"
        android:inputType="text"
        android:autofillHints="login"
        />

    <EditText
        android:id="@+id/user_password_auth"
        android:hint="@string/password"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/button_auth"
        style="@android:style/TextAppearance.Material.Button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"
        android:text="@string/authorization"
        android:textColor="@color/white"

        />

    <TextView
        android:id="@+id/registration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/inter"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="17sp" />

</LinearLayout>